<resources>
    <string name="app_name">Debt Collector</string>
    <string name="add_transaction">Add transaction</string>
    <string name="contacts">Contacts</string>
    <string name="recent">Recent</string>
    <string name="archive">Archive</string>
    <string name="transation_contact">Contact</string>
    <string name="transaction_amount">Amount:</string>
    <string name="add_transaction_saveBtn">Save</string>
    <string name="transaction_description">Description</string>
    <string name="transaction_title">Title</string>
    <string name="debt_settled_message">Mark debts as settled?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_contact_details">ContactDetails</string>
    <string name="transaction_status">Status:</string>
    <string name="transaction_created">Created on:</string>
    <string name="transaction_closed">Settled on:</string>
    <string name="date_format">dd.MM.yyyy HH:mm</string>
    <string name="balance_label">Balance:</string>
    <string name="contact_label">Contact:</string>
    <string name="mark_as_settled">Mark as settled</string>
    <string name="history_for">History entries for:&#160;</string>
    <string name="share">Share</string>
    <string name="contact_details_share_message">"Hey, a DebtCollector user wants to remind you that you owe him "</string>
    <string name="transaction_details_share_message">Hey, a DebtCollector user reminds you of your debt: &#160; </string>
</resources>
