<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.AddTransaction">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contactSelect">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transation_contact"
        android:id="@+id/contactSelectTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />


    <Button
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:text="+"
        android:textColor="@color/colorWhite"
        android:background="@drawable/round_button"
        android:id="@+id/add_contact_btn"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contactSelectAutoComplete"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/add_contact_btn"
            android:layout_toStartOf="@+id/add_contact_btn" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/amountPanel"
        android:layout_below="@+id/contactSelect">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_amount"
        android:id="@+id/amountTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_marginRight="20dp"
        android:id="@+id/amountEditText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/amountPanel"
        android:id="@+id/titlePanel">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_title"
            android:id="@+id/titleTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:layout_marginRight="20dp"
            android:id="@+id/titleEditText"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
    <Spinner
        android:layout_width="match_parent"
        android:layout_below="@id/titlePanel"
        android:id = "@+id/direction_spinner"
        android:layout_height="60dp"></Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/direction_spinner"
        android:text="@string/transaction_description"
        android:id="@+id/descriptionTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_marginRight="20dp"
        android:id="@+id/descriptionTextEdit"
        android:layout_below="@+id/direction_spinner"
        android:layout_alignEnd="@+id/saveBtn"
        android:layout_above="@+id/saveBtn"
        android:layout_alignRight="@+id/saveBtn" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_transaction_saveBtn"
        android:id="@+id/saveBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />


</RelativeLayout>
